# zk-ecies

./: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs  sha256.rs
program/: Cargo.toml  openvm.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
