[workspace]
members = [
  "lib",
  "program",
  "script",
]
resolver = "2"

[workspace.dependencies]
ecies-lib = { path = "lib" }
hkdf = "*"
hmac = "*"
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
rand_core = "*"
serde = { version = "1.0", default-features = false }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
sp1-build = "5.0"
sp1-sdk = "5.0"
sp1-zkvm = "5.0"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
