[package]
edition = "2021"
name = "ecies-lib"
version = "0.1.0"

[dependencies]
hkdf.workspace = true
hmac.workspace = true
k256.workspace = true
openvm-k256.workspace = true
rand_core.workspace = true
serde = { workspace = true, features = ["derive"] }
openvm-sha2.workspace = true
digest.workspace = true
