[package]
edition = "2021"
name = "ecies-script"
version = "0.1.0"

[dependencies]
ecies-lib.workspace = true
rand = "0.8"
openvm-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
toml.workspace = true
bitcode.workspace = true
tracing.workspace = true
openvm-benchmarks-prove.workspace = true
clap.workspace = true

[features]
